--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,12 +50,12 @@ javac.classpath=\
     ${file.reference.gson-2.8.2.jar}:\
     ${file.reference.httpclient-4.5.5.jar}:\
     ${file.reference.httpcore-4.4.9.jar}:\
-    ${file.reference.sqljdbc4.jar-1}:\
     ${file.reference.commons-logging-1.2.jar-1}:\
     ${file.reference.fluent-hc-4.5.5.jar-1}:\
     ${file.reference.gson-2.8.2.jar-1}:\
     ${file.reference.httpclient-4.5.5.jar-1}:\
-    ${file.reference.httpcore-4.4.9.jar-1}
+    ${file.reference.httpcore-4.4.9.jar-1}:\
+    ${file.reference.sqljdbc4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
